Updated officer pathing and added a table to entry view

--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -288,9 +288,8 @@
   </tbody>
 </table>
 <%= link_to "Back to members", members_path %>
-<% if @current_member&.position != 'Member' %>
-<%= link_to 'Bulk Add Officer Points', bulk_edit_officer_points_members_path %>
-<%= link_to 'Add Officer Points', new_officer_entry_path %>
+<% if @current_member&.position == 'President' %>
+  <%= link_to 'Add Officer Points', new_officer_entry_path %>
 <%end%>
 
 <script>
