Added views for editing and viewing finances and removed the icons folder and changed the buttons for finance view and fixed a bug with images when editing finances

--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -122,20 +122,25 @@
     }
 
     .newFinance button{
-      background-color: #C0C0C0;
+      background-color: #f9f9f9;
       color: #333;
       border: 2px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 20px;
+      font-size: 50px;
       cursor: pointer;
+      height: 75px;
+      width: 75px;
+      text-align: center;
+      margin-right: 325px;
+      margin-bottom: 20px;
     }
 
     .newFinance button:hover{
-      background-color: #f9f9f9;
+      background: #ccc;
     }
 
     .showFinance button{
-      background-color: #C0C0C0;
+      background-color: #f9f9f9;
       color: #333;
       border: 2px solid #ccc;
       border-radius: 5px;
@@ -144,14 +149,14 @@
     }
 
     .showFinance button:hover{
-      background-color: #f9f9f9;
+      scale: 1.1;
     }
 
     .pending-finance-box {
       border: 2px solid #ccc;
       border-radius: 5px;
       padding: 10px;
-      max-width: 600px;
+      max-width: 500px;
       margin: auto;
       background-color: #f9f9f9;
       margin-bottom: 10px;
@@ -161,7 +166,7 @@
       border: 2px solid #ccc;
       border-radius: 5px;
       padding: 10px;
-      max-width: 600px;
+      max-width: 500px;
       margin: auto;
       background-color: #f9f9f9;
       margin-bottom: 10px;
@@ -227,9 +232,18 @@
                 <%= render finance %>
                 <div class="showFinance">
                   <p>
-                    <%= link_to finance do %>
-                      <button type="button">Show this finance</button>
-                    <% end %>
+                    <div style="display: flex;">
+                      <%= link_to finance do %>
+                        <button type="button" style= "width: 20%;">
+                          <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
+                        </button>
+                      <% end %>
+                      <%= link_to edit_finance_path(finance) do %>
+                        <button type="button" style= "width: 20%;">
+                          <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
+                        </button>
+                      <% end %>
+                    </div>
                   </p>
                 </div>
               </div>
@@ -246,9 +260,16 @@
                 <%= render finance %>
                 <div class="showFinance">
                   <p>
-                    <%= link_to finance do %>
-                      <button type="button">Show this finance</button>
-                    <% end %>
+                    <div style="display: flex;">
+                      <%= link_to finance do %>
+                        <button type="button" style= "width: 20%;">
+                          <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
+                        </button>
+                      <% end %>
+                      <%= button_to finance, method: :delete, style: "width: 20%;" do %>
+                        <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                      <% end %>
+                    </div>
                   </p>
                 </div>
               </div>
@@ -266,9 +287,23 @@
                   <%= render finance %>
                   <div class="showFinance">
                     <p>
-                      <%= link_to finance do %>
-                        <button type="button">Show this finance</button>
-                      <% end %>
+                      <div style="display: flex;">
+                        <%= link_to finance do %>
+                          <button type="button" style="width: 30%;">
+                            <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
+                          </button>
+                        <% end %>
+                      
+                        <%= link_to edit_finance_path(finance) do %>
+                          <button type="button" style="width: 30%;">
+                            <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
+                          </button>
+                        <% end %>
+                      
+                        <%= button_to finance, method: :delete, style: "width: 30%;" do %>
+                          <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                        <% end %>
+                      </div>
                     </p>
                   </div>
                 </div>
@@ -287,7 +322,9 @@
                   <div class="showFinance">
                     <p>
                       <%= link_to finance do %>
-                        <button type="button">Show this finance</button>
+                        <button type="button" style= "width: 10%;">
+                          <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
+                        </button>
                       <% end %>
                     </p>
                   </div>
@@ -296,21 +333,24 @@
             <% end %>
           </div>
         <% end %>
-      <% end %>
-    </div>
-
-    <% if current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-      <div class="floating-button">
-        <div class = "newFinance">
-          <% if @current_member&.position != 'Member' %>
-            <%= link_to new_finance_path do %>
-              <button type="button">Create Finance</button>
+        <div class="floating-button">
+          <div class = "newFinance">
+            <% if @current_member&.position != 'Member' %>
+              <%= link_to new_finance_path do %>
+                <button type="button">+</button>
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
         </div>
-      </div>
-    <% end %>  
+      <% end %>
+    </div> 
 
   <% end %>
   <h1 class="side-header">IMSA</h1>
+  <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
+  <% if current_member&.position != 'Pending' %>
+    <a href="<%= profile_path %>">
+      <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
+    </a>
+  <% end %>
 <% end %>
