--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -202,9 +202,9 @@
           </div>
         </div>
       <% elsif current_member&.position == 'Pending' %>
-      <h2>Pending Member Dashboard</h2>
-        <h2>Your membership is pending...</h2>
-        <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
+        <h2>Pending Member Dashboard</h2>
+          <h2>Your membership is pending...</h2>
+          <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
       <% else %>
         <div class="admin-info">
           <h2>Member Dashboard</h2>
@@ -228,48 +228,27 @@
           </div>
         </div>  
       <% end %>
+      <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
+      <% if current_member&.position != 'Pending' %>
+        <a href="<%= profile_path %>">
+          <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
+        </a>
+        <div class="container my-5 pt-5">
+          <div class="row justify-content-center">
+            <div class="col-md-5 mb-3">
+              <%= link_to 'https://www.groupme.com/', target: "_blank" do %>
+                <%= image_tag 'groupme_logo.png', alt: 'First Image', class: 'img-fluid rounded', style: 'margin-top: -15%;' %>
+              <% end %>
+            </div>
+            <div class="col-md-5 mb-3">
+              <%= link_to 'https://www.instagram.com/', target: "_blank" do %>
+                <%= image_tag 'instagram_logo.png', alt: 'Second Image', class: 'img-fluid rounded', style: 'width:80%; margin-top: -15%;' %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
-  <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
-  <%if current_member&.position != 'Pending' %>
-    <a href="<%= profile_path %>">
-    <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
-    </a>
-    <div class="container my-5 pt-5">
-      <div class="row justify-content-center">
-        <div class="col-md-5 mb-3">
-          <%= link_to 'https://www.groupme.com/', target: "_blank" do %>
-            <%= image_tag 'groupme_logo.png', alt: 'First Image', class: 'img-fluid rounded' %>
-          <% end %>
-        </div>
-        <div class="col-md-5 mb-3">
-          <%= link_to 'https://www.instagram.com/', target: "_blank" do %>
-            <%= image_tag 'instagram_logo.png', alt: 'Second Image', class: 'img-fluid rounded', style: 'width:80%;' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
-
-</div>
-
-
-
-  <h1 class="side-header">IMSA</h1>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    var adminLinks = document.querySelector('.links');
-    var userLinks = document.querySelector('.user-links');
-    var adminInfo = document.querySelector('.admin-info');
-    var toggleButtons = document.querySelectorAll('.toggle-links-button');
-
     <h1 class="side-header">IMSA</h1>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -294,9 +273,8 @@
             }
           });
         });
-      });
+        </script>
     </script>
-
   </body>
 </html>
 
