--- a/app/views/finances/_form.html.erb
+++ b/app/views/finances/_form.html.erb
@@ -1,52 +1,248 @@
-<%= form_with(model: finance) do |form| %>
-  <% if finance.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(finance.errors.count, "error") %> prohibited this finance from being saved:</h2>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
+    .imsa-logo {
+      position: fixed;
+      top: 25px;
+      left: 50px;
+      width: 100px;
+    }
+    .profile-icon {
+      position: fixed;
+      top: 25px;
+      right: 50px; 
+      width: 100px; 
+      cursor: pointer;
+    }
 
-      <ul>
-        <% finance.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    h2 {
+      color: #333;
+    }
+
+    p {
+      color: #666;åå
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+      margin: 5px;
+    }
+
+    .admin-links,
+    .user-links {
+      display: block; 
+    }
+
+    .user-links,
+    .admin-info {
+      display: block; 
+    }
+
+    .toggle-links-button {
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      display: inline;
+      margin-right: 10px;
+    }
+
+    nav {
+      background-color: #007bff;
+      padding: 5px; 
+    }
+
+    nav a {
+      color: #fff;
+    }
+
+    .content {
+      margin-top: 60px; 
+    }
+
+    .navbar {
+      background-color: #007bff;
+      padding: 5px;
+      width: 55%;
+      margin: auto; 
+      margin-top: 5vh;
+      display: flex;
+      align-items: center; 
+      justify-content: space-evenly;
+      z-index: 1000;
+    }
+
+    .navbar a {
+      color: #fff;
+    }
+
+    .navbar .active a {
+      background-color: #C0C0C0; 
+      color: #007bff; 
+      border-radius: 5px; 
+    }
+
+    .navbar-nav {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .member-navbar {
+      width: 30%;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
+
+
+    .side-header {
+      transform: rotate(270deg);
+      position: fixed;
+      top: 75%; 
+      left: 11%; 
+      transform-origin: bottom left; 
+      letter-spacing: 0.8em; 
+      font-size: 100px; 
+      font-family: 'Mustopha'; 
+    }
+
+
+    .form-formatting { 
+      align-items: center; 
+    }
+
+  </style>
+</head>
+  
+<div class="form-formatting">
+  <%= form_with(model: finance) do |form| %>
+    <% if finance.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(finance.errors.count, "error") %> prohibited this finance from being saved:</h2>
+
+        <ul>
+          <% finance.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <br>
+
+    <div>
+      <%= form.label :email, style: "display: block; margin-bottom: 10px;" %>
+      <%= form.text_field :email, readonly: true, style: "margin-bottom: 10px;" %>
+    </div>
+
+    <div>
+      <%= form.label :eventTitle, "Event Title", style: "display: block; margin-bottom: 10px;" %>
+      <% if current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
+        <%= form.collection_select :eventTitle, @event_titles, :to_s, :to_s, prompt: "Select an event title", disabled: true %>
+      <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+        <%= form.collection_select :eventTitle, @event_titles, :to_s, :to_s, prompt: "Select an event title" %>
+      <% end %>
+    </div>
+
+    <div>
+      <%= form.label :cost, style: "display: block; margin-bottom: 10px; margin-top: 10px;" %>
+      <% if current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
+        <%= form.text_field :cost, style: "margin-bottom: 10px;", readonly: true %>
+      <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+        <%= form.text_field :cost, style: "margin-bottom: 10px;" %>
+      <% end %>
+    </div>
+
+    <div>
+      <%= form.label :description, style: "display: block; margin-bottom: 10px;" %>
+      <% if current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
+        <%= form.text_field :description, style: "margin-bottom: 10px;", readonly: true %>
+      <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+        <%= form.text_field :description, style: "margin-bottom: 10px;" %>
+      <% end %>
+    </div>
+
+    <div>
+      <% if current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
+        <%= form.label :resolved, style: "display: block; margin-bottom: 10px;" %>
+        <%= form.check_box :resolved, style: "margin-bottom: 10px;" %>
+      <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+        <%= form.check_box :resolved, style: "display: none;" %>
+      <% end %>
+    </div>
+
+    <div>
+      <%= form.label :receipt, style: "display: block; margin-bottom: 10px;" %>
+      <% if finance.receipt.present? %>
+        <%= image_tag "data:image/png;base64,#{@finance.receipt}", alt: 'Receipt' if @finance.receipt.present? %>
+        <br>
+        <br>
+      <% end %>
+
+      <% if current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+        <%= form.file_field :receipt, style: "margin-bottom: 10px; margin-left: 6.75%" %>
+      <% end %>
+    </div>
+
+    <div>
+      <% if finance.reimbursement.present? || current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
+        <%= form.label :reimbursement, style: "display: block; margin-bottom: 10px;" %>
+      <% end %>
+
+      <% if finance.reimbursement.present? %>
+        <%= image_tag "data:image/png;base64,#{@finance.reimbursement}", alt: 'Reimbursement' if @finance.reimbursement.present? %>
+        <br>
+        <br>
+      <% end %>
+
+      <% if current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
+        <%= form.file_field :reimbursement, style: "margin-bottom: 10px; margin-left: 6.75%" %>
+      <% end %>
+    </div>
+
+    <br>
+
+    <div>
+      <%= form.submit "Confirm",
+      style: "background-color: green;
+      color: white;
+      font-size: 16px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      text-align: center;" %>
+      <%= link_to "Cancel", finances_path,
+        style: "background-color: red;
+        color: white;
+        font-size: 16px;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        margin-left: 5%;
+        display: inline-block;
+        text-align: center;" %>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email, readonly: true %>
-  </div>
-
-  <div>
-    <%= form.label :eventTitle, style: "display: block" %>
-    <%= form.collection_select :eventTitle, @event_titles, :to_s, :to_s, prompt: "Select an event title" %>
-  </div>
-
-  <div>
-    <%= form.label :cost, style: "display: block" %>
-    <%= form.text_field :cost %>
-  </div>
-
-  <div>
-    <%= form.label :receipt, style: "display: block" %>
-    <%= form.file_field :receipt %>
-  </div>
-
-  <div>
-    <%= form.label :reimbursement, style: "display: block" %>
-    <%= form.file_field :reimbursement %>
-  </div>
-
-  <div>
-    <%= form.label :resolved, style: "display: block" %>
-    <%= form.check_box :resolved %>
-  </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
