--- a/app/views/finances/edit.html.erb
+++ b/app/views/finances/edit.html.erb
@@ -1,3 +1,4 @@
+<br>
 <h1>Editing finance</h1>
 
 <%= render "form", finance: @finance %>
@@ -5,6 +6,11 @@
 <br>
 
 <div>
-  <%= link_to "Show this finance", @finance %> |
-  <%= link_to "Back to finances", finances_path %>
+  <%= link_to finances_path do %>
+    <button type="button" style= "width: 5%; border: none; background: none; position: fixed; top: 25px; left: 25px;"
+    onmouseover="this.style.transform='scale(1.1)';"
+    onmouseout="this.style.transform='scale(1)';">
+      <%= image_tag "back_arrow_icon.png", alt: "Back to Finance Dashboard", style: "width: 100%; height: auto;" %>
+    </button>
+  <% end %>
 </div>
