--- a/app/views/finances/show.html.erb
+++ b/app/views/finances/show.html.erb
@@ -1,18 +1,45 @@
-  <p style="color: green"><%= notice %></p>
-  <%= render @finance %>
-  <p>
-    <strong>Receipt:</strong> <br> <!-- Line break after the Receipt image -->
-    <%= image_tag "data:image/png;base64,#{@finance.receipt}", alt: 'Receipt' if @finance.receipt.present? %>
-  </p>
+<br>
+<h1>Viewing finance</h1>
+<br>
 
-  <p>
+<%= render @finance %>
+
+<p>
+  <strong>Receipt:</strong> <br> <!-- Line break after the Receipt image -->
+  <%= image_tag "data:image/png;base64,#{@finance.receipt}", alt: 'Receipt' if @finance.receipt.present? %>
+</p>
+
+<p>
+  <% if @finance.reimbursement.present? %>
     <strong>Reimbursement:</strong> <br> <!-- Line break after the Receipt image -->
     <%= image_tag "data:image/png;base64,#{@finance.reimbursement}", alt: 'Reimbursement' if @finance.reimbursement.present? %>
-  </p>
+  <% end %>
+</p>
   
-  <div>
-    <%= link_to "Edit this finance", edit_finance_path(@finance) %> |
-    <%= link_to "Back to finances", finances_path %>
+<div>
+  <% if @finance.resolved == false %>
+    <%= link_to edit_finance_path(@finance) do %>
+      <button type="button" 
+      style="width: 5%; bottom: 50px; right: 225px; position: fixed; background: none; border: none;" 
+      onmouseover="this.style.transform='scale(1.1)';"
+      onmouseout="this.style.transform='scale(1)';">
+        <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
+      </button>
+    <% end %>
 
-    <%= button_to "Destroy this finance", @finance, method: :delete %>
-  </div>
+    <%= button_to @finance, method: :delete, 
+    style: "width: 5%; bottom: 50px; right: 100px; position: fixed; background: none; border: none;", 
+    onmouseover: "this.style.transform='scale(1.1)';",
+    onmouseout: "this.style.transform='scale(1)';" do %>
+      <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+    <% end %>
+  <% end %>  
+
+  <%= link_to finances_path do %>
+    <button type="button" style= "width: 5%; border: none; background: none; position: fixed; top: 25px; left: 25px;"
+    onmouseover="this.style.transform='scale(1.1)';"
+    onmouseout="this.style.transform='scale(1)';">
+      <%= image_tag "back_arrow_icon.png", alt: "Back to Finance Dashboard", style: "width: 100%; height: auto;" %>
+    </button>
+  <% end %>
+</div>
