--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -142,13 +142,15 @@
 
   <div>
     <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email, readonly: true %>
+    <%= form.text_field :email %>
   </div>
 
   <div>
     <%= form.label :event_name, style: "display: block" %>
     <%= form.text_field :event_name %>
   </div>
+
+  <br>
 
   <div>
     <%= form.submit %>
