fixing some bugs on the views

--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -24,6 +24,21 @@
       left: 41.25%;
     }
 
+    .imsa-logo {
+      position: fixed;
+      top: 25px;
+      left: 50px;
+      width: 100px;
+    }
+
+    .profile-icon {
+      position: fixed;
+      top: 25px;
+      right: 50px; 
+      width: 100px; 
+      cursor: pointer;
+    }
+
     p {
       color: #666;
     }
@@ -103,11 +118,11 @@
     .side-header {
       transform: rotate(270deg);
       position: fixed;
-      top: 70%; 
-      left: 200px; 
+      top: 75%; 
+      left: 11%; 
       transform-origin: bottom left; 
       letter-spacing: 0.8em; 
-      font-size: 120px; 
+      font-size: 100px; 
       font-family: 'Mustopha'; 
     }
 
