--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -148,7 +148,7 @@
             <td><%= member.email %></td>
             <td><%= member.position %></td>
             <td><%= member.totalPoints %></td>
-            <% if current_member&.position == 'Officer'%>
+            <% if current_member&.position == 'Officer' || current_member&.position == 'President' %>
               <td><%= link_to 'Show', member %></td>
               <td><%= link_to 'Edit', edit_member_path(member) %></td>
             
