--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,9 +1,61 @@
-<h1>New member</h1>
+<h1>Create New Member</h1>
 
-<%= render "new_form", member: @member %>
+<h2><%= render "new_form", member: @member %></h2>
 
 <br>
 
-<div>
+<style> 
+  h1 {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    position: relative;
+    top: 100px;
+  }
+  h2 {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    position: relative;
+    top: 100px;
+    outline-style: solid;
+    z-index: 2;
+  }
+
+  .triangle {
+    width: 0px;
+    height: 1000px;
+    border-left: 0px solid transparent; 
+    border-right: 1000px solid transparent; 
+    border-bottom: 700px solid maroon; 
+    position: absolute;
+    left: 00px;
+    bottom: 0px;
+}
+.triangle2 {
+    width: 0px;
+    height: 1000px;
+    border-left: 1000px solid transparent; 
+    border-right: 0px solid transparent; 
+    border-bottom: 700px solid maroon; 
+    position: absolute;
+    right: 00px;
+    bottom: 0px;
+}
+
+ .link {
+    height: 20px;
+    width: 300px;
+    position: absolute;
+    top: 450px;
+    left: 810px;
+    outline-style: solid;
+    font-family: Arial, sans-serif;
+    text-align: center;
+ }
+</style>
+
+<div class="triangle"></div> 
+<div class="triangle2"></div> 
+
+<div class="link">
   <%= link_to "Back to members", members_path %>
 </div>
