--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -9,7 +9,7 @@
   }
 
   .card:hover {
-    background-color: #585858 !important;
+    background-color: #f9f9f9 !important;
   }
 
   .event-section {
